V0.3
created enemy factory, created small enemies
pulled out load animations into a helper function

V 0.2
Finished up random background generation
turned character into sprite
background now draws around any object passed in - will need to test this when I have multiple object.

V 0.1
Created main game controller consisting of -
    main loop
    game setup
    drawing
    updating

Created player with the following capability -
    moving
    animations

Modified the idle breathing of the golden knight so he now holds his sword - only works correctly when facing right.
Modified the moving right and left animation so they align correctly with the idle animations.

Added background image
Added a sound controller --- This is currently broken but it's too damn late.