@@ -2,6 +2,9 @@ import pygame, os
 
 
 class Sound:
+    """
+    sound controller for the main game.
+    """
     def __init__(self):
         pygame.mixer.init()
         self.background_music = []
@@ -17,6 +20,7 @@ class Sound:
         # load idle animations
         for _, _, background_music in os.walk(self.__asset_path + self.__background_music_path):
             pass
+        # grabs all music from the folder and loads it
         if background_music is not None:
             for song in background_music:
                 if ".mp3" in song:
@@ -24,12 +28,8 @@ class Sound:
                     pygame.mixer.music.load(song)
                     self.background_music.append(song)
 
-
-    # def play_music(self):
-    #
-    #     pygame.mixer.music.play(-1, 0.0)
-
     def play_music(self):
+        # adds all songs to a queue
         for song in self.background_music:
             pygame.mixer.music.queue(song)
         pygame.mixer.music.play()
