@@ -1,6 +1,7 @@
 V0.3
 created enemy factory, created small enemies
 pulled out load animations into a helper function
+finally got around to adding comments and doc strings to funcs and classes.
 
 V 0.2
 Finished up random background generation
